--- a/app/index.html
+++ b/app/index.html
@@ -6,11 +6,191 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="ccs/libs.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
+
+    <header class="header">
+        <div class="header__top">
+            <div class="container">
+                <div class="header__inner">
+                    <div class="header__logo">
+                        <a href="#">
+                            Mart<span>Place</span>
+                        </a>
+                    </div>
+                    <div class="header__inner-content inner-content">
+                        <div class="inner-content__btn">
+                            <a href="#">
+                                Become a Seller
+                            </a>
+                        </div>
+                        <div class="inner-content__profile content__profile">
+                            <div class="content__profile-img">
+                                <a href="#" class="content__profile-img"
+                                    style="background-image: url(images/header-profile-img.jpg)" ;>
+                                </a>
+                            </div>
+
+                            <div class="content__profile-text">
+                                <div class="content__profile-name">
+                                    <a href="#">
+                                        Taofiq Hakim
+                                    </a>
+                                </div>
+                                <div class="content__profile-balance">
+                                    <a href="#">
+                                        $20.45
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="header__menu">
+            <div class="container">
+                <div class="header__menu-inner menu-inner">
+                    <div class="menu-inner__list">
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    HOME
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    all products
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    wordpress
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    festures
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Pages
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="menu-inner__search">
+                        <form>
+                            <input type="text" placeholder="Search product here..." required>
+                            <button type="submit">
+                                <img src="images/icons/search.png" alt="">
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <section class="marketplace">
+        <div class="container">
+            <div class="marketplace__inner">
+                <div class="marketplace__title">
+                    Create Your Own
+                    <span>Digital Product Marketplace</span>
+                </div>
+                <div class="marketplace__text">
+                    MartPlace is the most powerful, & customizable template for Easy Digital Downloads Products
+                </div>
+                <div class="marketplace__buttons">
+                    <div class="marketplace__button">
+                        <a href="#">
+                            View All Products
+                        </a>
+                    </div>
+                    <div class="marketplace__button">
+                        <a href="#">
+                            Popular Products
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="search">
+        <div class="container">
+            <div class="search__box">
+                <div class="search__item item-1"></div>
+                <div class="search__item item-2"></div>
+                <div class="search__item item-3">
+                    <form>
+                        <input type="text" placeholder="Search your products..." required>
+                        <div class="dropdown-btn">
+                            <a href="#">
+                                All Categories
+                            </a>
+                        </div>
+                        <button class="search-btn" type="submit">Search Now</button>
+                    </form>
+                </div>
+            </div>
+            <div class="advantages">
+                <div class="advantages__item">
+                    <div class="advantages__item-img advantages-1"
+                        style="background-image:url(images/icons/advantage-1.png)"></div>
+                    <div class="advantages__item-title">
+                        Best UX Research
+                    </div>
+                    <div class="advantages__item-text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__item-img advantages-2"
+                        style="background-image:url(images/icons/advantage-2.png)"></div>
+                    <div class="advantages__item-title">
+                        Fully Responsive
+                    </div>
+                    <div class="advantages__item-text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__item-img advantages-3"
+                        style="background-image:url(images/icons/advantage-3.png)"></div>
+                    <div class="advantages__item-title">
+                        Buy & Sell Easily
+                    </div>
+                    <div class="advantages__item-text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
