--- a/app/404.html
+++ b/app/404.html
@@ -460,101 +460,39 @@
 				</nav>
 			</header>
 
-			<section class="pricing__top">
+
+			<section class="error__top">
 				<div class="container">
-					<div class="pricing__top--wrapper">
+					<div class="error__top--wrapper">
 						<div class="breadcrumbs">
 							<div class="breadcrumbs__inner">
 								<ul class="breadcrumbs__list">
 									<li><a href="#">Home</a></li>
-									<li><span>Pricing Plan</span></li>
+									<li><span>404</span></li>
 								</ul>
 							</div>
 						</div>
-						<div class="pricing__top--info">
-							Pricing Plan
+						<div class="error__top--info">
+							Error-404
 						</div>
 					</div>
 				</div>
 			</section>
 
-			<section class="pricing">
+			<section class="error">
 				<div class="container">
-					<div class="pricing__title">
-						Fair and Simple <span>Pricing</span>
-						<h2 data-tooltip="tooltip text">Test the tooltip</h2>
-					</div>
-					<div class="pricing__text">
-						Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats.
-						Lid est laborum dolo rumes fugats untras.
-					</div>
-					<div class="pricing__items">
-						<div class="pricing__item">
-							<div class="pricing__item-title">
-								Starter
-							</div>
-							<div class="pricing__item-price">
-								<span class="value">$</span><span>69.00</span>/month
-							</div>
-							<ul class="pricing__item-list">
-								<li><span>3 Months</span> Membership</li>
-								<li><span>All Wordpress Templates</span></li>
-								<li>Forum Support</li>
-								<li>Unlimited Domain Usage</li>
-								<li><span>1 Domain</span> Tech Support</li>
-								<li>Copyright Removal</li>
-								<li><span>Demos</span> Included</li>
-								<li>Demo Pagebuilder</li>
-							</ul>
-							<a href="#" class="pricing__item-btn">
-								Get Started Plan
-							</a>
+					<div class="error__inner">
+						<div class="error__img"><img src="images/icons/404.png" alt=""></div>
+						<div class="error__text">
+							Oops! Page Not Found
 						</div>
-						<div class="pricing__item">
-							<div class="pricing__item-title">
-								Starter
-							</div>
-							<div class="pricing__item-price">
-								<span class="value">$</span><span>69.00</span>/month
-							</div>
-							<ul class="pricing__item-list">
-								<li><span>3 Months</span> Membership</li>
-								<li><span>All Wordpress Templates</span></li>
-								<li>Forum Support</li>
-								<li>Unlimited Domain Usage</li>
-								<li><span>1 Domain</span> Tech Support</li>
-								<li>Copyright Removal</li>
-								<li><span>Demos</span> Included</li>
-								<li>Demo Pagebuilder</li>
-							</ul>
-							<a href="#" class="pricing__item-btn">
-								Get Started Plan
-							</a>
-						</div>
-						<div class="pricing__item">
-							<div class="pricing__item-title">
-								Starter
-							</div>
-							<div class="pricing__item-price">
-								<span class="value">$</span><span>69.00</span>/month
-							</div>
-							<ul class="pricing__item-list">
-								<li><span>3 Months</span> Membership</li>
-								<li><span>All Wordpress Templates</span></li>
-								<li>Forum Support</li>
-								<li>Unlimited Domain Usage</li>
-								<li><span>1 Domain</span> Tech Support</li>
-								<li>Copyright Removal</li>
-								<li><span>Demos</span> Included</li>
-								<li>Demo Pagebuilder</li>
-							</ul>
-							<a href="#" class="pricing__item-btn">
-								Get Started Plan
-							</a>
-						</div>
+						<a class="error__btn" href="#">
+							Back to Home
+						</a>
 					</div>
 				</div>
 			</section>
+
 
 
 		</div>
