--- a/app/contact.html
+++ b/app/contact.html
@@ -460,101 +460,91 @@
 				</nav>
 			</header>
 
-			<section class="pricing__top">
+
+
+			<section class="contact__top">
 				<div class="container">
-					<div class="pricing__top--wrapper">
-						<div class="breadcrumbs">
-							<div class="breadcrumbs__inner">
-								<ul class="breadcrumbs__list">
-									<li><a href="#">Home</a></li>
-									<li><span>Pricing Plan</span></li>
-								</ul>
-							</div>
+					<div class="contact__top--wrapper">
+						<div class="contact__top--title">
+							Contact Us
 						</div>
-						<div class="pricing__top--info">
-							Pricing Plan
+						<div class="contact__top--text">
+							You came to the right place
 						</div>
 					</div>
 				</div>
 			</section>
 
-			<section class="pricing">
+			<section class="contact">
 				<div class="container">
-					<div class="pricing__title">
-						Fair and Simple <span>Pricing</span>
-						<h2 data-tooltip="tooltip text">Test the tooltip</h2>
+					<div class="contact__title">
+						How can We <span>Help?</span>
 					</div>
-					<div class="pricing__text">
+					<div class="contact__text">
 						Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats.
 						Lid est laborum dolo rumes fugats untras.
 					</div>
-					<div class="pricing__items">
-						<div class="pricing__item">
-							<div class="pricing__item-title">
-								Starter
+					<div class="contact__items">
+						<div class="contact__item">
+							<div class="contact__item-wrapper">
+								<div class="contact__item-icon lnr lnr-map-marker"></div>
+								<div class="contact__item-title title-contact">
+									Office Address
+								</div>
+								<div class="contact__item-text">
+									202 New Hampshire Avenue
+									Northwest #100, New York-2573
+								</div>
 							</div>
-							<div class="pricing__item-price">
-								<span class="value">$</span><span>69.00</span>/month
-							</div>
-							<ul class="pricing__item-list">
-								<li><span>3 Months</span> Membership</li>
-								<li><span>All Wordpress Templates</span></li>
-								<li>Forum Support</li>
-								<li>Unlimited Domain Usage</li>
-								<li><span>1 Domain</span> Tech Support</li>
-								<li>Copyright Removal</li>
-								<li><span>Demos</span> Included</li>
-								<li>Demo Pagebuilder</li>
-							</ul>
-							<a href="#" class="pricing__item-btn">
-								Get Started Plan
-							</a>
 						</div>
-						<div class="pricing__item">
-							<div class="pricing__item-title">
-								Starter
+						<div class="contact__item">
+							<div class="contact__item-wrapper">
+								<div class="contact__item-icon lnr lnr-phone"></div>
+								<div class="contact__item-title title-contact">
+									Phone Number
+								</div>
+								<div class="contact__item-text">
+									<a href="tel:18006434500" class="contact__item-number">1-800-643-4500</a>
+									<a href="tel:18006434500" class="contact__item-number">1-800-643-4500</a>
+								</div>
 							</div>
-							<div class="pricing__item-price">
-								<span class="value">$</span><span>69.00</span>/month
-							</div>
-							<ul class="pricing__item-list">
-								<li><span>3 Months</span> Membership</li>
-								<li><span>All Wordpress Templates</span></li>
-								<li>Forum Support</li>
-								<li>Unlimited Domain Usage</li>
-								<li><span>1 Domain</span> Tech Support</li>
-								<li>Copyright Removal</li>
-								<li><span>Demos</span> Included</li>
-								<li>Demo Pagebuilder</li>
-							</ul>
-							<a href="#" class="pricing__item-btn">
-								Get Started Plan
-							</a>
 						</div>
-						<div class="pricing__item">
-							<div class="pricing__item-title">
-								Starter
+						<div class="contact__item">
+							<div class="contact__item-wrapper">
+								<div class="contact__item-icon lnr lnr-inbox"></div>
+								<div class="contact__item-title title-contact">
+									Email Address
+								</div>
+								<div class="contact__item-text">
+									<a href="#" class="contact__item-number">support@aazztech.com</a>
+									<a href="#" class="contact__item-number">support@aazztech.com</a>
+								</div>
 							</div>
-							<div class="pricing__item-price">
-								<span class="value">$</span><span>69.00</span>/month
-							</div>
-							<ul class="pricing__item-list">
-								<li><span>3 Months</span> Membership</li>
-								<li><span>All Wordpress Templates</span></li>
-								<li>Forum Support</li>
-								<li>Unlimited Domain Usage</li>
-								<li><span>1 Domain</span> Tech Support</li>
-								<li>Copyright Removal</li>
-								<li><span>Demos</span> Included</li>
-								<li>Demo Pagebuilder</li>
-							</ul>
-							<a href="#" class="pricing__item-btn">
-								Get Started Plan
-							</a>
 						</div>
 					</div>
-				</div>
+					<div class="contact-form">
+						<div class="contact-form__title">
+							Leave Your Messages
+						</div>
+						<form class="contact-form_form">
+							<input type="text" placeholder="Name" required>
+							<input type="text" placeholder="Email" required>
+							<input type="text" placeholder="Subject" required>
+							<input type="text" placeholder="Phone" required>
+							<textarea type="text" placeholder="Your text here.." required></textarea>
+						</form>
+						<button class="contact-form__btn" type="submit">Send Request</button>
+					</div>
 			</section>
+
+			<section class="map">
+				<iframe
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d577325.3485127188!2d36.82509492938725!3d55.581524336976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54afc73d4b0c9%3A0x3d44d6cc5757cf4c!2z0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8!5e0!3m2!1sru!2s!4v1583930961320!5m2!1sru!2s"
+					frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+			</section>
+
+
+
 
 
 		</div>
