--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 	<div class="wrapper">
 		<div class="content">
 			<header class="header">
-				<div class="header__top">
+				<div class="header__top wow slideInLeft" data-wow-duration="2s">
 					<div class="container">
 						<div class="header__inner">
 							<div class="header__logo">
@@ -24,8 +24,8 @@
 								</a>
 							</div>
 							<div class="header__inner-content inner-content">
-								<div class="inner-content__btn">
-									<a class="header-seller" href="#">
+								<div class="inner-content__btn" id="ff">
+									<a class="header-seller" href="#join">
 										Become a Seller
 									</a>
 									<div class="notification__box">
@@ -1334,7 +1334,7 @@
 				</div>
 			</section>
 
-			<section class="join">
+			<section class="join" id="join">
 				<div class="container">
 					<div class="join__inner">
 						<div class="join__title">Ready to Join Our Marketplace!</div>
