--- a/app/login.html
+++ b/app/login.html
@@ -496,7 +496,7 @@
 								<input type="text" required placeholder="Enter your username...">
 
 								<div class="info-form__title">Password</div>
-								<input type="text" required placeholder="Enter your password...">
+								<input type="password" required placeholder="Enter your password...">
 
 								<label><input type="checkbox"><span>Remember me</span></label>
 
